# ai_inventiveness

./: LICENCE  Makefile  README.md  environment.yml  pyproject.toml
examples/: pcl1_llm-api.py
examples/Solution/: solution.json  solution.py  tasks_with_embeddings_and_principles.json
examples/Solution/prompts/: task_label.py
examples/classification/: classification.py
examples/classification copy/: classification.py  classification_task.json  predictions.json
examples/classification copy/prompts/: task_label.py
examples/classification/prompts/: task_label.py
examples/embeddings/: embeddings.py  matrix_values.csv  parameters.json  parameters.txt  principles_names.txt
examples/extraction/: extraction.py  extraction_task_contr.json
examples/prompting/: prompting.py
examples/prompts/: task_label.py
src/service/: classification_service.py  embedding_service.py
tasks/pcl3/: extraction_task.json
