[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_inv"
version = "0.0.1"
description = "Course materials for Artificial Inventiveness course (W10IME-SD0149L)"
authors = [
  { name = "Marek Piotr Mysior" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = "~=3.10"

[tool.flit.module]
name = "ai_inv"

[tool.flit.sdist]
include = ["src/"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''
